# gxi_hako

./: Cargo.toml  LICENSE  Readme.md
doc/dev/: dev_note.md
doc/inc/: DxImageProc.h  GxIAPI.h  GxPixelFormat.h
examples/: callback_capture.rs  get_image.rs  list_devices_info.rs  open_device_by_index.rs  open_device_by_sn.rs
history/: buf.md  callback.md  creater.md  frh.md  ori.md  prompts.md  refactGet.md  sec.md  tri.md
inc/: GxPixelFormat.h
src/: lib.rs  main.rs
src/gx/: gx_callback.rs  gx_const.rs  gx_enum.rs  gx_handle.rs  gx_interface.rs  gx_pixel_format.rs  gx_struct.rs  mod.rs
src/utils/: builder.rs  cv_gui.rs  debug.rs  facade.rs  image_process.rs  mod.rs  status.rs
test/: test_gx.rs
