[package]
name = "gxi_hako"
version = "0.1.0"
edition = "2021"
authors = [
    "Hako Chest <zoneherobrine@gmail.com>"
]
rust-version = "1.77.2"
description = "A rust camera interface based on Daheng's GxIAPI"
keywords = ["gx", "mer", "daheng", "industry camera"]
categories = ["hardware-support"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.8.3"
image = "0.25.1"
opencv = "0.91.1"