[package]
name = "gxi_hako"
version = "0.1.1"
edition = "2021"
authors = [
    "Hako Chest <zoneherobrine@gmail.com>"
]
rust-version = "1.77.0"
description = "A rust camera interface based on Daheng-Image's GxIAPI(Galaxy Camera SDK)"
keywords = ["gx","galaxy", "mer", "daheng", "camera"]
categories = ["hardware-support"]
license = "MIT"
documentation = "https://docs.rs/gxi_hako"
repository = "https://github.com/zoneherobrine/gxi_hako"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.8.3"
image = "0.25.1"
opencv = "0.91.1"